# NeutroWater

./: .gitignore  404.html  LICENSE  README.md  collision.ipynb  collision.py  cross_section.ipynb  diffusing_neutrons.py  index.html  neutron.py  objects.inv  pyproject.toml  requirements.txt  search.html  sitemap.xml
analysis/: angle.ipynb  collision.ipynb  cross_section.ipynb  interpolation.ipynb  maxwell_boltzmann.ipynb  neutron_spectrum.ipynb  simulation.ipynb
citings/: index.html
data/: H_angular.txt  h_cross_a.txt  h_cross_t.txt  mean_free_path.csv  neutron_spectrum.txt  neutron_spectrum_normalized.txt  o_cross_s.txt  o_cross_t.txt
details/: index.html
docs/: mkdocs.yml
docs/docs/: citings.md  index.md  install_guide.md  reference.md  references.md  results.md  theory.md  user_guide.md
flow/: index.html
geometry/: index.html
guide/: index.html
install_guide/: index.html
interpolating/: index.html
introduction/: index.html
javascripts/: mathjax.js
models/: neutron.py  neutrons.py  tank.py
monte_carlo/: index.html
physics/: index.html
reference/: index.html
references/: index.html
results/: index.html
search/: search_index.json
simulation/: index.html
src/neutrons/: data_processor.py  diffusing_neutrons.py  mean_free_path.py  neutrons.py  post_measure.py
src/neutrons/data_processing/: cross_section_processor.py  data_processor.py  spectrum_processor.py
src/neutrons/models/: collisions.py  neutrons.py  tank.py
src/neutrons/process/: angular_processor.py  data_processor.py  maxwell_boltzmann.py
src/neutrowater/: diffusing_neutrons.py  post_measure.py
src/neutrowater/data/: O_angular.txt  h_cross_s.txt  h_cross_t.txt  o_cross_a.txt
src/neutrowater/models/: collisions.py  tank.py
src/neutrowater/post/: __init__.py  measure.py  plot.py
src/neutrowater/process/: angular_processor.py  data_processor.py
tests/: test_data_processor.py  test_diffusing_neutrons.py  test_neutrons.py  test_tank.py
theory/: index.html
theory/geometry/: index.html
theory/interpolating/: index.html
theory/introduction/: index.html
theory/monte_carlo/: index.html
theory/physics/: index.html
theory/post_measurements/: index.html
user_guide/: index.html
