[tool.poetry]
name = "neutrons"
version = "0.1.0"
description = ""
authors = ["DerkNiessink <derk@niessink.com>"]
readme = "README.md"
packages = [
    { include = "neutrons", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
scienceplots = "^2.1.1"
numpy = "^1.26.4"
matplotlib = "^3.8.2"
pytest = "^8.0.0"
ipykernel = "^6.29.1"
pandas = "^2.2.0"
scipy = "^1.12.0"
seaborn = "^0.13.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]